# AEAT-Sender

./: .gitignore  GUIA_RAPIDA.md  LICENSE  PORTFOLIO.md  README.md  ROADMAP.md  config.json.example  pyproject.toml  requirements-dev.txt  requirements.txt
aeat_sender/: __init__.py  cli.py  config.py  logging_config.py  soap_client.py  xml_handler.py
docs/media/: README.md
tests/: __init__.py  test_cli.py  test_soap_client.py  test_xml_handler.py
